--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -252,12 +252,12 @@
                                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="Document List" dataset="bind:Variables.Cx2DocumentData.dataSet" navigation="Classic" name="gridDocuments">
                                                         <wm-grid-column binding="filename" caption="Filename" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                        <wm-grid-action key="addNewRow" display-name="Add" show="bind:Variables.FormStatus.dataSet.data[$i].allowAttachments" class="btn-primary" iconclass="wi wi-plus" title="Add" action="Widgets.dialogUploadDocument.open()"
+                                                        <wm-grid-action key="addNewRow" display-name="Add" show="bind:defaultObjectForSelectStatus.allowAttachments" class="btn-primary" iconclass="wi wi-plus" title="Add" action="Widgets.dialogUploadDocument.open()"
                                                         shortcutkey="" disabled="false"></wm-grid-action>
                                                         <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-file-download" title="Download" action="Variables.svDownloadDocument.invoke()"
                                                         disabled="false"></wm-grid-row-action>
-                                                        <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.FormStatus.dataSet.data[$i].allowAttachments" class="btn-transparent" iconclass="wi wi-trash" title="Delete"
-                                                        action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="bind:defaultObjectForSelectStatus.allowAttachments" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()"
+                                                        disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
                                                 </wm-livegrid>
                                             </wm-gridcolumn>
@@ -314,7 +314,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneInspections" title="INSPECTIONS">
+                                <wm-tabpane name="tabpaneInspections" title="INSPECTIONS" show="bind:Variables.lvFormType.dataSet.data[$i].inspections">
                                     <wm-layoutgrid name="layoutgrid15">
                                         <wm-gridrow name="gridrow56">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn117">
