--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -46,7 +46,7 @@
                                 <wm-gridrow name="gridrow14">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn24_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn28" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="labelFormStatus" caption="bind:'Status: '+defaultObjectForSelectStatus.status" hint="bind:defaultObjectForSelectStatus.description" class="h3"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="labelFormStatus" caption="bind:'Status: '+Variables.stvCurrentStatus.dataSet.status" hint="bind:Variables.stvCurrentStatus.dataSet.description" class="h3"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn25"></wm-gridcolumn>
                                 </wm-gridrow>
@@ -71,7 +71,7 @@
                                         <wm-composite name="composite1" required="false">
                                             <wm-label class="col-md-3 control-label" name="label4" caption="Status"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
-                                                <wm-select name="selectStatus" dataset="bind:Variables.FormStatus.dataSet" datafield="All Fields" displayfield="status" datavalue="bind:defaultObjectForSelectStatus"></wm-select>
+                                                <wm-select name="selectStatus" dataset="bind:Variables.FormStatus.dataSet" datafield="All Fields" displayfield="status" datavalue="bind:Variables.stvCurrentStatus.dataSet"></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -252,12 +252,12 @@
                                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="Document List" dataset="bind:Variables.Cx2DocumentData.dataSet" navigation="Classic" name="gridDocuments">
                                                         <wm-grid-column binding="filename" caption="Filename" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                        <wm-grid-action key="addNewRow" display-name="Add" show="bind:defaultObjectForSelectStatus.allowAttachments" class="btn-primary" iconclass="wi wi-plus" title="Add" action="Widgets.dialogUploadDocument.open()"
+                                                        <wm-grid-action key="addNewRow" display-name="Add" show="bind:Variables.stvCurrentStatus.dataSet.allowAttachments" class="btn-primary" iconclass="wi wi-plus" title="Add" action="Widgets.dialogUploadDocument.open()"
                                                         shortcutkey="" disabled="false"></wm-grid-action>
                                                         <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-file-download" title="Download" action="Variables.svDownloadDocument.invoke()"
                                                         disabled="false"></wm-grid-row-action>
-                                                        <wm-grid-row-action key="deleterow" display-name="" show="bind:defaultObjectForSelectStatus.allowAttachments" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()"
-                                                        disabled="false"></wm-grid-row-action>
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.stvCurrentStatus.dataSet.allowAttachments" class="btn-transparent" iconclass="wi wi-trash" title="Delete"
+                                                        action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
                                                 </wm-livegrid>
                                             </wm-gridcolumn>
