cleaned up Find Form Files modified - [FindForm.html,FindForm.variables.json,MyMunicipality.html,NewForm.variables.json,servicedef.xml]

--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -28,8 +28,7 @@
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-search"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn7" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Find Form" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileTitle" caption="Find Form" class="p" fontsize="1.5" fontunit="em" margin="1.5em unset 2em unset"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
