- Added setFormStatus to FormService which handles form status updates without silly moving parts, and will be supporting recalculation of automatic fees - Updated Forms page to use the new function Files modified - [DBUtils.jar,FormController.java,FormService.java,Forms.variables.json,pom.xml,Forms.html,Forms.js]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -92,7 +92,7 @@
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" horizontalalign="center">
-                                        <wm-button class="btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.UpdateFormStatusInMasterForms.invoke()" iconclass="wi wi-update"></wm-button>
+                                        <wm-button class="btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.svSetFormStatus.invoke()" iconclass="wi wi-update"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                                 </wm-gridrow>
